--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>光電板模擬實驗</title>
-
 <link rel="stylesheet" href="style.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
 </head>
@@ -12,13 +11,10 @@
 <body>
 
 <!-- ================= 幻燈片區 ================= -->
-<div id="viewerWrapper">
-  <div id="viewer">
-    <img id="slideImg" src="images/Thank_you_page-0001.jpg" alt="幻燈片">
-    <input type="range" id="timelineSlider" min="0" max="100" value="0">
-  </div>
-  <!-- 暫停按鈕在幻燈片左側 -->
-  <button id="pauseBtn">⏸</button>
+<div id="viewer">
+  <button id="pauseBtn">⏸</button> <!-- 暫停鍵 -->
+  <img id="slideImg" src="images/Thank_you_page-0001.jpg" alt="幻燈片">
+  <input type="range" id="timelineSlider" min="0" max="100" value="0">
 </div>
 
 <div id="startScreen">
@@ -30,6 +26,7 @@
 
   <h2 style="color:#00ff88;">模擬實驗：光電板與 LED 電流</h2>
 
+  <!-- 🔬 實驗變因說明 -->
   <div class="variable-box">
     <h3>🔬 實驗變因設定</h3>
     <ul>
@@ -39,6 +36,7 @@
     </ul>
   </div>
 
+  <!-- 操作區 -->
   <div class="control-panel">
     <label>🎨 玻璃紙顏色：
       <select id="glassColor">
@@ -59,10 +57,12 @@
     <div class="simulation-area" id="simulationArea"></div>
   </div>
 
+  <!-- 圖表 -->
   <div class="chart-container">
     <canvas id="mainChart"></canvas>
   </div>
 
+  <!-- 統計 -->
   <div class="stats-grid">
     <div class="stat-card">
       <h3>最高電流</h3>
@@ -81,6 +81,7 @@
     </div>
   </div>
 
+  <!-- 表格 -->
   <table>
     <thead>
       <tr>
