--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
 
 <div class="viewer-container">
-  <!-- 播放/暫停按鈕在左側 -->
-  <button id="playPauseBtn"></button>
+  <!-- 合併播放/暫停按鈕 -->
+  <button id="playPauseBtn">▶ 播放</button>
 
-  <!-- 幻燈片 -->
+  <!-- 幻燈片區 -->
   <div id="viewer">
     <img id="slideImg" src="images/Thank_you_page-0001.jpg" alt="幻燈片">
     <input type="range" id="timelineSlider" min="0" max="100" value="0">
